<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/mygrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/mainTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:text="@string/applicationTitle"
                android:textColor="@color/black"
                android:textSize="38dp" />



            <!--<fragment
                android:name="com.example.quizapplication.QuizFragment"
                android:id="@+id/quiz_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" /> -->

            <TextView
                android:id="@+id/signInPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:text="@string/signIn" />

            <EditText
                android:id="@+id/userNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/writeUserName"
                android:backgroundTint="@color/black"
                android:inputType="textPersonName" />


            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:hint="@string/writePassword"
                android:ems="10"
                android:backgroundTint="@color/black"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">
                <Button
                    android:id="@+id/nextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginLeft="50dp"
                    android:text="@string/startQuiz"
                    android:onClick="startQuiz"/>

                <Button
                    android:id="@+id/aboutButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginLeft="50dp"
                    android:text="@string/about"
                    android:onClick="aboutApplication"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</layout>