<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizFragment"
    android:background="@color/mygrey">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mygrey"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/scoreText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="3"
                android:text="@string/score" />

            <TextView
                android:id="@+id/scoreDisplay"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="0.9"
                android:text="0/10"
                android:textColor="@color/black"/>

        </LinearLayout>


        <TextView
            android:id="@+id/questionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="left"
            android:text="@string/questionText"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">


            <RadioGroup
                android:id="@+id/myRadiogroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:visibility="visible">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer1" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer2" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer3" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer4" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/checkboxLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:visibility="gone">

            <CheckBox
                android:id="@+id/checkbox1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:text="@string/answer1"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/checkbox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:text="@string/answer2"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/checkbox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@android:color/white"
                android:text="@string/answer3" />

            <CheckBox
                android:id="@+id/checkbox4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@android:color/white"
                android:text="@string/answer4"/>
            <Button
                android:id="@+id/checkboxSubmitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="60dp"
                android:layout_marginLeft="60dp"
                android:layout_gravity="center"
                android:text="@string/checkBoxSubButton"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/inputAnswerTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/inputAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:hint="@string/inputAnswer"
                android:inputType="text" />
            <Button
                android:id="@+id/inputTextSubmitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="25dp"
                android:text="@string/inputAnswerButton"/>

        </LinearLayout>


    </LinearLayout>
    </ScrollView>
</layout>